--- a/breakout.css
+++ b/breakout.css
@@ -6,7 +6,13 @@ html {
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+h2 {
+    text-align:center;
+    font-size: 40px;
+    color: white;
 }
 
 .outer {
@@ -139,40 +145,10 @@ body {
     position: absolute;
     bottom: 0px;
 }
-.welcome {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    color: white;
-    
-    top: 300px;
-    left: 400px;
-}
 
-.startButton {
-    font-family: Arial, Helvetica, sans-serif;
+button {
     font-size: 20px;
     background-color: purple;
-    border-radius: 25%;
-    position: absolute;
-    top: 350px;
-    left: 500px;
-}
-
-.gameover {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    color: white;
-    position: absolute;
-    top: 300px;
-    left: 400px;
-}
-
-.playAgainButton {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    background-color: purple;
-    border-radius: 25%;
-    position: absolute;
-    top: 350px;
-    left: 500px;
+    display:block;
+    margin:auto
 }
